[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"
default-run = "aoc_2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"

[[bin]]
name = "day1"
path = "src/day01.rs"

[[bin]]
name = "day2"
path = "src/day02.rs"